--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "firebase": "^10.7.0",
     "vue": "^2.7.7"
   },
   "devDependencies": {
